bk_ida/gccida/c0/dbxout_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_type/src/dbxout.c:1508:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_type/src/dbxout.c:1528:1: error: must use 'enum' tag to refer to type 'typestatus'
typestatus status; // [rsp+ACh] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_type/src/dbxout.c:1533:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tem; // [rsp+C8h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_type/src/dbxout.c:1564:6: error: expected expression
v2 = ::next_type_number++; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_type/src/dbxout.c:1566:6: error: expected expression
if ( ::next_type_number == typevec_len ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_type/src/dbxout.c:1965:73: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( ( ( *( ( _DWORD *)&child->common + 4) >> 18) & 1) != 0 && !strcmp( lang_hooks_0.name, "GNU C++") ) 
                                                                        ^~~~~~~~~~~~
                                                                        lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_type/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_type/src/dbxout.c:2037:7: error: use of undeclared identifier 'dbxout_type_anonymous_type_number'
v15 = dbxout_type_anonymous_type_number++; 
      ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_type/src/obj/dbxout.o] Error 1
